# pysui-fastcrypto

./: .gitignore  CHANGELOG.md  Cargo.toml  README.rst  pyproject.toml  requirements.txt
.github/workflows/: build_release.yml
src/: lib.rs
tests/: test_pysui_fastcrypto.py
