[package]
name = "pysui-fastcrypto"
version = "0.1.3"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "pysui_fastcrypto"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
base64ct = "1.6.0"
bip32 = "0.5.1"
fastcrypto = "0.1.5"
slip10_ed25519 = "0.1.3"
tiny-bip39 = "1.0.0"

[dependencies.pyo3]
version = "0.19.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]